corona' hands' cohanim

--- a/index.html
+++ b/index.html
@@ -431,6 +431,8 @@ Error message and password prompt
 
 <li>ברכת השמש</li>
 
+<li>ברכת כהנים</li>
+
 <li>בשביל הפרחים</li>
 
 <li>בשדרה בדרך הביתה</li>
@@ -618,6 +620,8 @@ Error message and password prompt
 <li>הכפר הגלובלי</li>
 
 <li>הכתיבה</li>
+
+<li>הלכות קורונה</li>
 
 <li>המגדלור</li>
 
@@ -848,6 +852,8 @@ Error message and password prompt
 <li>כמה שירים כבר אפשר להמציא בכלל</li>
 
 <li>כמולונז</li>
+
+<li>כפות ידיים</li>
 
 <li>כרבולת בבית החזה</li>
 
@@ -9068,8 +9074,9 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;file:///C:/Users/user/Desktop/coen%20sisters/pictures/eva-veyoyo.jpg&quot;,
-            &quot;title&quot;: &quot;Untitled&quot;
+            &quot;title&quot;: &quot;Untitled&quot;,
+            &quot;text&quot;: &quot;\n &lt;&lt;heblink [[מוזיקה]]&gt;&gt;&quot;,
+            &quot;type&quot;: &quot;text/plain&quot;
         }
     }
 }</pre>
@@ -9186,10 +9193,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200324164917600" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200330165057621" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200325162036349" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200330165059068" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9198,7 +9205,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עץ המשפחה של אווה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הלכות קורונה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9218,7 +9225,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200330152521215" title="$:/temp/search">
+<div created="20161023184814872" modified="20200330171322011" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9653,7 +9660,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200313121752626" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200330161654933" tags="[[המטבח על פי ז'נבייב]] מטבחים [[כפות ידיים]]" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10619,7 +10626,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200330152441886" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200330161759300" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -10958,6 +10965,16 @@ Is where I want to be
  
 
 &lt;&lt;englink [[Gratitude for the sun]]&gt;&gt;</pre>
+</div>
+<div created="20200330155507337" modified="20200330165143299" tags="[[כפות ידיים]] [[נאמני הגנזך]] [[האנקי דורי]]" title="ברכת כהנים">
+<pre>
+[img[pictures/birkat-cohanim.jpg]]
+
+
+
+
+&lt;&lt;englink [[Priestly Blessing]]&gt;&gt;
+</pre>
 </div>
 <div created="20180719103156821" modified="20200217164555895" tags="[[כאן בגטו]]" title="בשביל הפרחים">
 <pre>[img[pictures/bishvil-haprachim.jpg]]
@@ -12019,7 +12036,7 @@ Is where I want to be
 
 &lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
 </div>
-<div created="20200303102502696" modified="20200324171311296" tags="[[קופים ממונעים]] ילדים סגירים [[האנקי דורי]]" title="דור הנפש">
+<div created="20200303102502696" modified="20200330161857120" tags="[[קופים ממונעים]] ילדים סגירים [[האנקי דורי]] [[הלכות קורונה]]" title="דור הנפש">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
@@ -12413,7 +12430,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Harry Dean Stanton]]&gt;&gt;
 </pre>
 </div>
-<div created="20190324091820505" modified="20200226072744917" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="הבריסטות שכאן">
+<div created="20190324091820505" modified="20200330162004766" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]] מטבחים [[כפות ידיים]]" title="הבריסטות שכאן">
 <pre>[img[pictures/barista.jpg]]
 
 !!![[תומר]]:
@@ -12439,7 +12456,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The bartender]]&gt;&gt;</pre>
 </div>
-<div created="20171005203600150" modified="20200320093029030" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]] סגירים" title="הגוף מתעדכן">
+<div created="20171005203600150" modified="20200330161940807" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]] סגירים [[כפות ידיים]]" title="הגוף מתעדכן">
 <pre>[img[pictures/haguf-mitadken.jpg]]
 
 !!![[אירי]]:
@@ -12699,7 +12716,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The blue is already here]]&gt;&gt;
 </pre>
 </div>
-<div created="20161217212236965" modified="20200320093405281" tags="[[אירי וגורה]] [[קופים ממונעים]] [[אירי טוענת]] סגירים" title="הכפר הגלובלי">
+<div created="20161217212236965" modified="20200330162559602" tags="[[אירי וגורה]] [[קופים ממונעים]] [[אירי טוענת]] סגירים [[הלכות קורונה]]" title="הכפר הגלובלי">
 <pre>[img[pictures/hacfar-haglobaly.jpg]]
 
 !!![[אירי]] [[וגורה|גורה]]:
@@ -12743,6 +12760,23 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 &lt;&lt;englink [[Me writing]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330160706845" modified="20200330171959773" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="הלכות קורונה">
+<pre>
+[img[pictures/corona.jpg]]
+
+
+זה מה שמותר לעשות בזמן קורונה, לשבת עם הטלפון החכם, הטלוויזיה דולקת עם חדשות עליה כי אשרי אדם מפחד תמיד, הטאבלט פתוח עם נטפליקס גם אם הלכת למטבח לאכול משהו שזה לא מומלץ אך בלתי נמנע.
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[הלכות קורונה]]&quot;&gt;&gt;
+
+
+
+&lt;&lt;englink [[Corona beings]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20190210161447471" modified="20200219153717011" tags="[[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="המגדלור">
@@ -13174,7 +13208,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Teder/Romano]]&gt;&gt;</pre>
 </div>
-<div created="20200325160820858" modified="20200325191919936" tags="[[כאן בגטו]] [[בתי קפה]] קפה" title="התור לגרציאני">
+<div created="20200325160820858" modified="20200330171210722" tags="[[כאן בגטו]] [[בתי קפה]] קפה [[הלכות קורונה]]" title="התור לגרציאני">
 <pre>[img[pictures/the-line-to-graziani.jpg]]
 
 
@@ -13745,7 +13779,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181006124035047" modified="20200320094650691" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[מטא בדיון]] סגירים" title="טלפון חכם">
+<div created="20181006124035047" modified="20200330163927179" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[מטא בדיון]] סגירים [[כפות ידיים]] [[הלכות קורונה]]" title="טלפון חכם">
 <pre>[img[pictures/smart-phone.jpg]]
 
 !!![[ג'ונג]]:
@@ -13761,7 +13795,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170514194133105" modified="20200215093417791" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
+<div created="20170514194133105" modified="20200330163902170" tags="[[בחוות החיות]] [[כפות ידיים]]" title="יד ימין אינה יודעת">
 <pre>[img[pictures/yad-yamin.jpg]]
 
 
@@ -14724,7 +14758,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[They cut down trees]]&gt;&gt;
 </pre>
 </div>
-<div created="20161115215130799" modified="20200215210143835" title="כירולוגיה פסיכודיאגנוסטית">
+<div created="20161115215130799" modified="20200330164030538" tags="[[כפות ידיים]]" title="כירולוגיה פסיכודיאגנוסטית">
 <pre>[img[pictures/yZiEyakkL0F87eQO.JPG]]
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].
@@ -14833,6 +14867,21 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 לדעתי הטוב ביותר הוא אחרי שמכבים את האש והתבשיל &quot;נח&quot; זמן מה, טועמים, מתקנים תיבול אם צריך ומחממים שוב.
 
 &lt;&lt;englink [[Bolognese-alike]]&gt;&gt;
+</pre>
+</div>
+<div created="20200330154148282" modified="20200330165131599" tags="חבר [[אירי טוענת]]" title="כפות ידיים">
+<pre>
+[img[pictures/palms.jpg]]
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[כפות ידיים]]&quot;&gt;&gt;
+
+
+
+&lt;&lt;englink [[Palms of the hands]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20180605150218529" modified="20200308100536946" tags="[[קופים ממונעים]]" title="כרבולת בבית החזה">
@@ -15023,7 +15072,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Crust dough extras 2]]&gt;&gt;</pre>
 </div>
-<div created="20180508163939540" modified="20200225173036869" tags="[[אירי טוענת]] [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="כתב התנועה אשכול-וכמן">
+<div created="20180508163939540" modified="20200330164206373" tags="[[אירי טוענת]] [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="כתב התנועה אשכול-וכמן">
 <pre>[img[pictures/ctav-tnua.jpg]]
 
 !!![[אירי]]:
@@ -15560,7 +15609,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180702161904435" modified="20200215225644713" tags="[[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] [[מטא בדיון]]" title="לצייר">
+<div created="20180702161904435" modified="20200330171349723" tags="[[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] [[מטא בדיון]] [[הלכות קורונה]] [[כפות ידיים]]" title="לצייר">
 <pre>[img[pictures/lezayer.jpg]]
 
 !!![[גורה]]:
@@ -15962,7 +16011,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20200217134717224" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]] כביסה מטבחים" title="מיזונפלציה">
+<div created="20170112174310883" modified="20200330164323925" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]] כביסה מטבחים [[כפות ידיים]]" title="מיזונפלציה">
 <pre>[img[pictures/mizonplazya.jpg]]
 
 
@@ -16107,7 +16156,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Assuming and Preserving]]&gt;&gt;</pre>
 </div>
-<div created="20170114175718512" modified="20200220153718633" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="מנקים היטב">
+<div created="20170114175718512" modified="20200330164345351" tags="[[המטבח על פי ז'נבייב]] מטבחים [[כפות ידיים]]" title="מנקים היטב">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
 !!![[ז'נבייב]]:
@@ -16201,7 +16250,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Tel Aviv Desk]]&gt;&gt;</pre>
 </div>
-<div created="20170422190532804" modified="20200220153108546" tags="[[חלומות שחלמנו]] מטבחים" title="מפעיל יד">
+<div created="20170422190532804" modified="20200330164359992" tags="[[חלומות שחלמנו]] מטבחים [[כפות ידיים]]" title="מפעיל יד">
 <pre>[img[pictures/mafil-yad.jpg]]
 
 !!![[יויו]]:
@@ -16235,7 +16284,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מצפה ראשית, או בקיצור, [[מִיצְפֶּרֶש|דיור מוגז]] (כמחווה למפעל [[מִיצְפְרֶש|מיצפרש]] המקומי), הוא הישוב [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
 </div>
-<div created="20170223175057546" modified="20200218195412288" tags="חבר" title="מקלדת">
+<div created="20170223175057546" modified="20200330164417018" tags="חבר [[כפות ידיים]]" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
 
 !!![[גורה]]:
@@ -16473,7 +16522,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180604190242526" modified="20200213162539717" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="מתכונים">
+<div created="20180604190242526" modified="20200330164508497" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="מתכונים">
 <pre>[img[pictures/matconim.jpg]]
 
 !!![[אירי]]:
@@ -16654,7 +16703,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20200318190000717" modified="20200325191040895" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]]" title="סגירים">
+<div created="20200318190000717" modified="20200330164708142" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]] [[הלכות קורונה]]" title="סגירים">
 <pre>[img[pictures/closers.jpg]]
 
 !!![[גורה]]:
@@ -16681,7 +16730,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Closers]]&gt;&gt;</pre>
 </div>
-<div created="20170711173812724" modified="20200320095437307" tags="טלוויזיה סגירים" title="סדרות">
+<div created="20170711173812724" modified="20200330164722046" tags="טלוויזיה סגירים [[הלכות קורונה]]" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
@@ -17006,7 +17055,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Spiral]]&gt;&gt;</pre>
 </div>
-<div created="20190126100956225" modified="20200320095618798" tags="חבר [[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] סגירים" title="סרטים">
+<div created="20190126100956225" modified="20200330164800528" tags="חבר [[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] סגירים [[הלכות קורונה]]" title="סרטים">
 <pre>[img[pictures/sratim.jpg]]
 
 !!![[יויו]]:
@@ -17463,7 +17512,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[The lawyer]]&gt;&gt;</pre>
 </div>
-<div created="20170522171825469" modified="20200215102644329" tags="[[בחוות החיות]]" title="עושים שלום">
+<div created="20170522171825469" modified="20200330164822597" tags="[[בחוות החיות]] [[כפות ידיים]]" title="עושים שלום">
 <pre>[img[pictures/clavzirim-osim-shalom.jpg]]
 
 
@@ -17643,7 +17692,7 @@ May the lord bless your soul, I love you girl
 
 לשים לה את היד (עם כפפה) על הפנים, ולסובב.</pre>
 </div>
-<div created="20161218191604654" modified="20200330152524691" tags="[[הנחלה בה גדלתי]] ילדים סגירים" title="עץ המשפחה של אווה">
+<div created="20161218191604654" modified="20200330165157577" tags="[[הנחלה בה גדלתי]] ילדים סגירים" title="עץ המשפחה של אווה">
 <pre>[img[pictures/eva-garinit.jpg]]
 
 
