--- a/index.html
+++ b/index.html
@@ -12762,13 +12762,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Me writing]]&gt;&gt;
 </pre>
 </div>
-<div created="20200330160706845" modified="20200330171959773" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="הלכות קורונה">
+<div created="20200330160706845" modified="20200330191030528" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[כאן בגטו]]" title="הלכות קורונה">
 <pre>
 [img[pictures/corona.jpg]]
 
+!!![[תומר]]:
 
-זה מה שמותר לעשות בזמן קורונה, לשבת עם הטלפון החכם, הטלוויזיה דולקת עם חדשות עליה כי אשרי אדם מפחד תמיד, הטאבלט פתוח עם נטפליקס גם אם הלכת למטבח לאכול משהו שזה לא מומלץ אך בלתי נמנע.
-
+זה [[מה שמותר לעשות|https://www.youtube.com/watch?v=vjWebKavfuI&amp;list=RDvjWebKavfuI&amp;start_radio=1]] בזמן קורונה, לשבת עם הטלפון החכם, הטלוויזיה דולקת עם חדשות עליה כי אשרי אדם מפחד תמיד, הטאבלט פתוח עם נטפליקס גם אם הלכת למטבח לאכול משהו.
 
 
 &lt;&lt;list-links filter:&quot;[tag[הלכות קורונה]]&quot;&gt;&gt;
