--- a/english.html
+++ b/english.html
@@ -9074,10 +9074,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200330165256130" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200330171558996" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200331152958603" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9086,7 +9086,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Eva`s family tree]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9106,7 +9106,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200330171652655" title="$:/temp/search">
+<div created="20161023184814872" modified="20200331152703193" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10309,9 +10309,15 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
  &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
 </div>
-<div created="20200330160637738" modified="20200330171609266" tags="[[True stories]] [[Monkeys with car keys]]" title="Corona beings">
+<div created="20200330160637738" modified="20200331152430631" tags="[[True stories]] [[Monkeys with car keys]]" title="Corona beings">
 <pre>
 [img[pictures/corona.jpg]]
+
+
+!!![[Tomer]]:
+
+[[This is what you are allowed to do|https://www.youtube.com/watch?v=vjWebKavfuI&amp;list=RDvjWebKavfuI&amp;start_radio=1]] during the Corona times. Sitting with your [[smart phone|Smartphone]], the [[TV]] is on with the news because joyful is the person who is always afraid, the tablet is opened with Netflix even if you go to the kitchen just to eat something. 
+
 
 
 
@@ -14434,8 +14440,15 @@ The TLV is totally here in the ghetto, at the triangle between Ha Hashmonaim, Ca
 
  &lt;&lt;heblink [[TLV]]&gt;&gt;</pre>
 </div>
-<div created="20200215225422814" modified="20200330171311872" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]] [[Palms of the hands]]" title="To draw">
+<div created="20200215225422814" modified="20200331153150736" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]] [[Palms of the hands]]" title="To draw">
 <pre>[img[pictures/lezayer.jpg]]
+
+
+!!![[Gura]]:
+
+[[Karl Ove|Karl Ove Knausgard]] is affecting me too. There are moments when his words are actually like paintings. He is speaking about life and by the way of doing so, among other things he speaks of painters, paintings, views and landscapes. He speaks patiently and clearly about every single thing. I too, aspire to be thought of as [[a writer|Searching for Iry]], but now: I write and draw on A4 Bristol papers, and use oil coloured pencils. I only draw for the website, and if I have nothing to draw I find something. I choose what to draw, sometimes I collect a few photographs that I took, or pictures from search engines, and add them up for one single picture. I take a head from here, and a room from there. After I finish drawing with a pencil I colour it - this is the most joyful thing for me. Adding colour to another colour. Colours have always hypnotized me like sounds, and when they are together they are like music - up lifting. It’s not that it’s easy for me to draw, though I am not suffering while doing it either, it’s just that there are moments when my head is distorting from the inside from the effort. The results being far from those that I have planned or wanted, and still this is what I most want to be doing. 
+
+
 
 
  &lt;&lt;heblink [[לצייר]]&gt;&gt;</pre>
