--- a/english.html
+++ b/english.html
@@ -9086,7 +9086,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Priestly Blessing]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13031,7 +13031,7 @@ I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in 
 
 </pre>
 </div>
-<div created="20200330155359346" modified="20200330171634691" tags="[[The archive's trustees]] [[Hunky Dory]] [[Palms of the hands]]" title="Priestly Blessing">
+<div created="20200330155359346" modified="20200401102453872" tags="[[The archive's trustees]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Priestly Blessing">
 <pre>
 [img[pictures/birkat-cohanim.jpg]]
 
