--- a/index.html
+++ b/index.html
@@ -9205,7 +9205,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הלכות קורונה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כפות ידיים]] [[ברכת כהנים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9225,7 +9225,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200330171322011" title="$:/temp/search">
+<div created="20161023184814872" modified="20200401091948098" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9544,13 +9544,28 @@ well,
     float: right;
 }</pre>
 </div>
-<div created="20200325193323563" modified="20200327170041496" tags="מוזיקה [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]] [[סיפורים אמיתיים]]" title="Sunny">
+<div created="20200325193323563" modified="20200401102116467" tags="מוזיקה [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]] [[סיפורים אמיתיים]]" title="Sunny">
 <pre>[img[pictures/sunny.jpg]]
 
 
 !!![[יויו]]:
 
-גרסאות רבות לשיר הנפלא הזה, כמו למשל זו של ג'יימס בראון בה הוא מספר בכמה מילים איך בובי הב כתב את השיר.  
+בגירסה המעולה הזו [[לסאני|https://he.wikipedia.org/wiki/Sunny]], [[ג'יימס בראון|https://www.youtube.com/watch?v=p6FmS5Co-j4]] מספר במילותיו, איך [[בובי הב|https://www.youtube.com/watch?v=ubvYQxTXO3U]] מממפיס טנסי, כתב את השיר הנפלא,  כשהיה כ&quot;כ עצוב אחרי שאחיו הגדול והאהוב הרולד נהרג ב-23 בנובמבר 1963, יום אחרי רצח הנשיא ג'ון פ. קנדי.
+
+לא בכדי [[יש לשיר|https://www.youtube.com/watch?v=3U9uPIPzG8o]] היחיד והמיוחד הזה מאות [[גרסאות כיסוי|https://www.youtube.com/watch?v=Gw-M58IjIuI]], שכן מדובר [[בשיר מושלם|https://www.youtube.com/watch?v=zvvBOWI1-jY]], כי [[איך אפשר שלא לשיר|https://www.youtube.com/watch?v=yD8DcgpLp_w]]:
+
+
+//
+Sunny, thank you for the sunshine bouquet.
+
+Sunny, thank you for the love you brought my way.
+
+You gave to me your all and all, now I feel ten feet tall.
+
+Sunny one so true, I love you.//
+
+
+ 
 
 
 
@@ -10966,9 +10981,13 @@ Is where I want to be
 
 &lt;&lt;englink [[Gratitude for the sun]]&gt;&gt;</pre>
 </div>
-<div created="20200330155507337" modified="20200330165143299" tags="[[כפות ידיים]] [[נאמני הגנזך]] [[האנקי דורי]]" title="ברכת כהנים">
-<pre>
-[img[pictures/birkat-cohanim.jpg]]
+<div created="20200330155507337" modified="20200401102238773" tags="[[כפות ידיים]] [[נאמני הגנזך]] [[האנקי דורי]] [[הלכות קורונה]]" title="ברכת כהנים">
+<pre>[img[pictures/birkat-cohanim.jpg]]
+
+
+!!![[יויו]]:
+
+בפורים התש&quot;פ תכננתי להתחפש [[לכהן|https://he.wikipedia.org/wiki/%D7%91%D7%A8%D7%9B%D7%AA_%D7%9B%D7%94%D7%A0%D7%99%D7%9D]], אבל הקורונה השאירה אותי בבית עם מסכת מגן ארוכה כמעט עד הברכיים.
 
 
 
@@ -12763,8 +12782,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20200330160706845" modified="20200330191030528" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[כאן בגטו]]" title="הלכות קורונה">
-<pre>
-[img[pictures/corona.jpg]]
+<pre>[img[pictures/corona.jpg]]
 
 !!![[תומר]]:
 
@@ -14869,11 +14887,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Bolognese-alike]]&gt;&gt;
 </pre>
 </div>
-<div created="20200330154148282" modified="20200330165131599" tags="חבר [[אירי טוענת]]" title="כפות ידיים">
-<pre>
-[img[pictures/palms.jpg]]
+<div created="20200330154148282" modified="20200401102613744" tags="חבר [[אירי טוענת]] [[הלכות קורונה]]" title="כפות ידיים">
+<pre>[img[pictures/palms.jpg]]
 
+ 
+!!![[אירי]]:
 
+כפות הידיים הן [[שתי החמודות האלה|https://he.wikipedia.org/wiki/%D7%9B%D7%A3_%D7%99%D7%93]], אליהן מחוברות חמש אצבעות, והן עצמן מחוברות  דרך שורש כף היד לאמות, שמחוברות לזרועות, שמחוברות לגוף שמחובר לראש שנותן הוראות והן מבצעות, אך לא תמיד כך הוא. 
+
+לכפות הידיים תבונה משל עצמן ולעתים הן מוליכות אותנו מבלי דעת לטוב ולטוב יותר. קורה לא פעם שהן מוליכות אותי למטבח ומוציאות מהמקרר חתיכת דג, ואני צורבת אותו במחבת, ומניחה על הצלחת, ומוציאה עלעלים ומקשטת.
+
+&quot;מה את מקשטת?&quot;, ראשי שואל אותי. הממ מעניין אני חושבת. &quot;זה יפה וזה גם מוסיף לטעם של הדג&quot;, הידיים עונות לי, בלי הסברים כאלה כמו בשף ריאליטי, שהקרנצ'יות של העלעלים בביס עם הפריכות המתפצפצת של העור של הדג מתפוצצים בפה כמו אהבה ממבט ראשון.
+
+בגלל זה אני אוהבת את כפות הידיים שלי, הן לא מאכילות שיט.
 
 
 &lt;&lt;list-links filter:&quot;[tag[כפות ידיים]]&quot;&gt;&gt;
