--- a/english.html
+++ b/english.html
@@ -9077,7 +9077,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200331152958603" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200401121537294" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9086,7 +9086,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Priestly Blessing]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Hand activator]] [[Cleaning properly]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9106,7 +9106,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200331152703193" title="$:/temp/search">
+<div created="20161023184814872" modified="20200401121843525" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10178,8 +10178,17 @@ coming soon as possible
  &lt;&lt;heblink [[כריסטופר מולטיסנטי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200220153427025" modified="20200220153617910" tags="[[The kitchen by Genevieve]] Kitchens" title="Cleaning properly">
+<div created="20200220153427025" modified="20200401122040110" tags="[[The kitchen by Genevieve]] Kitchens" title="Cleaning properly">
 <pre>[img[pictures/menakim-heytev.jpg]]
+
+
+!!![[Genevieve]]:
+
+A few days after [[Yoyo]] started working for me, in the end of a work day, as we were cleaning the restaurant, I noticed that when he was turning over the chairs and putting them on the tables he was also cleaning the feet of the chairs. I have never seen that!
+
+I asked Yoyo to become the [[cleaning supervisor|Hand activator]] and he accepted the job happily.
+
+Because of Yoyo, in the kitchen of “Chez Genevieve” we all clean well.       
 
 
 
@@ -14041,9 +14050,13 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
  &lt;&lt;heblink [[עורכת הדין]]&gt;&gt;</pre>
 </div>
-<div created="20200325160957545" modified="20200330171138914" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[Corona beings]]" title="The line for Graziani">
+<div created="20200325160957545" modified="20200401121433200" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[Corona beings]]" title="The line for Graziani">
 <pre>[img[pictures/the-line-to-graziani.jpg]]
 
+
+!!![[Tomer]]:
+
+Here and now during the Corona times, not more than a hundred meters from home, the sweet Yaniv from [[Graziani]] drew circles on the floor in the entrance of the cafe, in a distance of two meters one from the other as well as arrows. You don’t enter the cafe but stand in the entrance, Avraham who makes great coffee is on the coffee machine that was put facing outwards, Yaniv is responsible for the breads, sandwiches and the rest of the delicious baked goods which you go straight home with. 
 
 
 
