--- a/index.html
+++ b/index.html
@@ -9205,7 +9205,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כפות ידיים]] [[ברכת כהנים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כפות ידיים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9225,7 +9225,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200401091948098" title="$:/temp/search">
+<div created="20161023184814872" modified="20200401121604900" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14887,7 +14887,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Bolognese-alike]]&gt;&gt;
 </pre>
 </div>
-<div created="20200330154148282" modified="20200401102613744" tags="חבר [[אירי טוענת]] [[הלכות קורונה]]" title="כפות ידיים">
+<div created="20200330154148282" modified="20200401133644714" tags="חבר [[אירי טוענת]] [[הלכות קורונה]]" title="כפות ידיים">
 <pre>[img[pictures/palms.jpg]]
 
  
@@ -14897,9 +14897,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לכפות הידיים תבונה משל עצמן ולעתים הן מוליכות אותנו מבלי דעת לטוב ולטוב יותר. קורה לא פעם שהן מוליכות אותי למטבח ומוציאות מהמקרר חתיכת דג, ואני צורבת אותו במחבת, ומניחה על הצלחת, ומוציאה עלעלים ומקשטת.
 
-&quot;מה את מקשטת?&quot;, ראשי שואל אותי. הממ מעניין אני חושבת. &quot;זה יפה וזה גם מוסיף לטעם של הדג&quot;, הידיים עונות לי, בלי הסברים כאלה כמו בשף ריאליטי, שהקרנצ'יות של העלעלים בביס עם הפריכות המתפצפצת של העור של הדג מתפוצצים בפה כמו אהבה ממבט ראשון.
+&quot;מה את מקשטת?&quot;, ראשי שואל אותי. הממ מעניין אני חושבת. &quot;זה יפה וזה גם מוסיף לטעם של הדג&quot;, הידיים עונות לי, בלי הסברים כאלה כמו בשף ריאליטי, שהקרנצ'יות של העלעלים בביס עם הפריכות המתפצפצת של העור של הדג מתפוצצות בפה כמו אהבה ממבט ראשון.
 
-בגלל זה אני אוהבת את כפות הידיים שלי, הן לא מאכילות שיט.
+בגלל זה אני אוהבת את כפות הידיים, הן לא מאכילות שיט.
 
 
 &lt;&lt;list-links filter:&quot;[tag[כפות ידיים]]&quot;&gt;&gt;
