--- a/english.html
+++ b/english.html
@@ -9077,7 +9077,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200401121537294" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200402152948821" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9086,7 +9086,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Hand activator]] [[Cleaning properly]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10319,8 +10319,7 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
  &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
 </div>
 <div created="20200330160637738" modified="20200331152430631" tags="[[True stories]] [[Monkeys with car keys]]" title="Corona beings">
-<pre>
-[img[pictures/corona.jpg]]
+<pre>[img[pictures/corona.jpg]]
 
 
 !!![[Tomer]]:
@@ -12818,9 +12817,23 @@ Here in the [[archive|The archive's trustees]] we add from time to time, with lo
 
  &lt;&lt;heblink [[עגבניות בתנור]]&gt;&gt;</pre>
 </div>
-<div created="20200330154701754" modified="20200330171621241" tags="[[A friend]] [[Iry claims]]" title="Palms of the hands">
-<pre>
-[img[pictures/palms.jpg]]
+<div created="20200330154701754" modified="20200402152911564" tags="[[A friend]] [[Iry claims]]" title="Palms of the hands">
+<pre>[img[pictures/palms.jpg]]
+
+
+
+
+!!![[Iry]]: 
+
+The palms of the hands are [[these two sweet|https://en.wikipedia.org/wiki/Hand]] things that have five fingers connected to them, and which are connected to the wrists, that are connected to the arms that are connected to the body which is connected to the head that gives the hands orders which they carry out, though it’s not always so. 
+
+The hands have their own wisdom and sometimes they guide us without us noticing to good and better places than we would go by ourselves. It happens quite often that they guide me to the kitchen, they take out a piece of fish from the fridge, I then burn it on the pan, place it on a plate and finish by garnishing it with leaflets. 
+
+“Why are you garnishing it?” My head asks. That’s interesting, I notice. “It’s both pretty and adds some taste to the fish.” My hands answer. Without those sorts of explanations like in the reality chefs, that the crunchiness of the leaflets together with the crispiness of the fish blow up inside the mouth like love at first site.
+
+That’s why I love the palms of my hands, they don’t feed me shit. 
+
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[Palms of the hands]]&quot;&gt;&gt;
@@ -13040,11 +13053,13 @@ I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in 
 
 </pre>
 </div>
-<div created="20200330155359346" modified="20200401102453872" tags="[[The archive's trustees]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Priestly Blessing">
-<pre>
-[img[pictures/birkat-cohanim.jpg]]
+<div created="20200330155359346" modified="20200402153046878" tags="[[The archive's trustees]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Priestly Blessing">
+<pre>[img[pictures/birkat-cohanim.jpg]]
 
 
+!!![[Yoyo]]:
+
+During Purim 5780 I wanted to dress up as a [[priest|https://en.wikipedia.org/wiki/Priestly_Blessing]], but the Corona kept me at home with a mask almost till my knees. 
 
 
 
