--- a/index.html
+++ b/index.html
@@ -9205,7 +9205,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ברכת כהנים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10981,7 +10981,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Gratitude for the sun]]&gt;&gt;</pre>
 </div>
-<div created="20200330155507337" modified="20200401102238773" tags="[[כפות ידיים]] [[נאמני הגנזך]] [[האנקי דורי]] [[הלכות קורונה]]" title="ברכת כהנים">
+<div created="20200330155507337" modified="20200403100815573" tags="[[כפות ידיים]] [[נאמני הגנזך]] [[האנקי דורי]] [[הלכות קורונה]]" title="ברכת כהנים">
 <pre>[img[pictures/birkat-cohanim.jpg]]
 
 
@@ -10992,7 +10992,7 @@ Is where I want to be
 
 
 
-&lt;&lt;englink [[Priestly Blessing]]&gt;&gt;
+&lt;&lt;englink [[Birkat Kohanim]]&gt;&gt;
 </pre>
 </div>
 <div created="20180719103156821" modified="20200217164555895" tags="[[כאן בגטו]]" title="בשביל הפרחים">
