--- a/english.html
+++ b/english.html
@@ -325,6 +325,8 @@ Error message and password prompt
 
 <li>bg</li>
 
+<li>Birkat Cohanim</li>
+
 <li>Birthday cake</li>
 
 <li>Bishvil Haprachim</li>
@@ -864,8 +866,6 @@ Error message and password prompt
 <li>Powders</li>
 
 <li>Pride here</li>
-
-<li>Priestly Blessing</li>
 
 <li>Prince</li>
 
@@ -9077,7 +9077,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200402152948821" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200403100930033" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9086,7 +9086,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Birkat Cohanim]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9729,6 +9729,19 @@ Beautiful Ahal is the beautiful [[Ahal Eden|https://www.instagram.com/ahaleden/]
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
+</div>
+<div created="20200330155359346" modified="20200403101834769" tags="[[The archive's trustees]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Birkat Cohanim">
+<pre>[img[pictures/birkat-cohanim.jpg]]
+
+
+!!![[Yoyo]]:
+
+During [[Purim|https://en.wikipedia.org/wiki/Purim]] 5780 I wanted to dress up as a [[Cohen|https://en.wikipedia.org/wiki/Priestly_Blessing]], but the Corona kept me at home with a mask almost till my knees. 
+
+
+
+
+ &lt;&lt;heblink [[ברכת כהנים]]&gt;&gt;</pre>
 </div>
 <div created="20200306155442102" modified="20200306155613164" tags="Children Recipes [[When they sleep]] [[Food addicts]] Baking" title="Birthday cake">
 <pre>[img[pictures/birthday-cake.jpg]]
@@ -13052,19 +13065,6 @@ I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in 
 
 
 </pre>
-</div>
-<div created="20200330155359346" modified="20200402153046878" tags="[[The archive's trustees]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Priestly Blessing">
-<pre>[img[pictures/birkat-cohanim.jpg]]
-
-
-!!![[Yoyo]]:
-
-During Purim 5780 I wanted to dress up as a [[priest|https://en.wikipedia.org/wiki/Priestly_Blessing]], but the Corona kept me at home with a mask almost till my knees. 
-
-
-
-
- &lt;&lt;heblink [[ברכת כהנים]]&gt;&gt;</pre>
 </div>
 <div created="20200213204850477" modified="20200324171845599" tags="[[Outer sisters]] Music Films [[Hunky Dory]]" title="Prince">
 <pre>[img[pictures/prince.jpg]]
