--- a/index.html
+++ b/index.html
@@ -885,6 +885,8 @@ Error message and password prompt
 
 <li>לא חברמניות</li>
 
+<li>לאונרד כהן</li>
+
 <li>להרוג את איב</li>
 
 <li>להתרועע עם האחות ב. כהן</li>
@@ -9205,7 +9207,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לאונרד כהן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15120,6 +15122,45 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Non-hunky-dory]]&gt;&gt;</pre>
 </div>
+<div created="20200404103552755" modified="20200404120621895" tags="מוזיקה [[אחיות חוץ]] [[הלכות קורונה]]" title="לאונרד כהן">
+<pre>[img[pictures/leonard-cohen.jpg]]
+
+
+!!![[הצוות]]:
+
+[[לאונרד כהן|https://he.wikipedia.org/wiki/%D7%9C%D7%90%D7%95%D7%A0%D7%A8%D7%93_%D7%9B%D7%94%D7%9F]] האגדי ז&quot;ל לא היה צריך קורונה כדי לכתוב את [[השיר הזה|https://www.youtube.com/watch?v=9UzvVOy0Dq8]] ובתקווה שלא נשכח את תובנות הימים האלה.
+
+
+
+
+Villanelle for Our Time
+
+
+From bitter searching of the heart,
+Quickened with passion and with pain
+We rise to play a greater part.
+This is the faith from which we start:
+Men shall know commonwealth again
+From bitter searching of the heart.
+We loved the easy and the smart,
+But now, with keener hand and brain,
+We rise to play a greater part.
+The lesser loyalties depart,
+And neither race nor creed remain
+From bitter searching of the heart.
+Not steering by the venal chart
+That tricked the mass for private gain,
+We rise to play a greater part.
+Reshaping narrow law and art
+Whose symbols are the millions slain,
+From bitter searching of the heart
+We rise to play a greater part.
+
+
+
+
+&lt;&lt;englink [[Leonard Cohen]]&gt;&gt;</pre>
+</div>
 <div created="20180614102328845" modified="20200226103940541" tags="סדרות טלוויזיה" title="להרוג את איב">
 <pre>[img[pictures/killing-eve.jpg]]
 
@@ -17081,7 +17122,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Spiral]]&gt;&gt;</pre>
 </div>
-<div created="20190126100956225" modified="20200330164800528" tags="חבר [[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] סגירים [[הלכות קורונה]]" title="סרטים">
+<div created="20190126100956225" modified="20200404120552470" tags="חבר [[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] סגירים [[הלכות קורונה]]" title="סרטים">
 <pre>[img[pictures/sratim.jpg]]
 
 !!![[יויו]]:
