--- a/english.html
+++ b/english.html
@@ -671,6 +671,8 @@ Error message and password prompt
 
 <li>Lentil salad</li>
 
+<li>Leonard Cohen</li>
+
 <li>Less is more</li>
 
 <li>Lettuce salad</li>
@@ -9086,7 +9088,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Birkat Cohanim]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11908,6 +11910,16 @@ Don't want to be a lemonade, I've got sugar in my bitterness, like the happiness
 
  &lt;&lt;heblink [[סלט עדשים עם כוסברה ובצל קצוץ]]&gt;&gt;</pre>
 </div>
+<div created="20200404120341485" modified="20200404120511242" tags="Music [[outer sisters]] [[How many songs can you even invent at all]] [[Corona beings]]" title="Leonard Cohen">
+<pre>
+[img[pictures/leonard-cohen.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[לאונרד כהן]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215225741395" modified="20200219132954190" tags="Kitchens [[The kitchen by Genevieve]]" title="Less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
@@ -14577,7 +14589,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 </pre>
 </div>
-<div created="20200212204228178" modified="20200330171457761" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]]" title="TV">
+<div created="20200212204228178" modified="20200404120449274" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]]" title="TV">
 <pre>[img[pictures/television.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[TV]]&quot;&gt;&gt;
