--- a/english.html
+++ b/english.html
@@ -921,6 +921,8 @@ Error message and password prompt
 
 <li>Rushell</li>
 
+<li>SA OOTW LW SSR</li>
+
 <li>Saraleh would have liked it</li>
 
 <li>Scents</li>
@@ -9079,7 +9081,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200403100930033" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200404171741059" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9088,7 +9090,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[TV Series]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9108,7 +9110,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200401121843525" title="$:/temp/search">
+<div created="20161023184814872" modified="20200404170840741" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10833,7 +10835,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20200330165838376" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]]" title="Films">
+<div created="20200212161010633" modified="20200404171323498" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11910,9 +11912,18 @@ Don't want to be a lemonade, I've got sugar in my bitterness, like the happiness
 
  &lt;&lt;heblink [[סלט עדשים עם כוסברה ובצל קצוץ]]&gt;&gt;</pre>
 </div>
-<div created="20200404120341485" modified="20200404120511242" tags="Music [[outer sisters]] [[How many songs can you even invent at all]] [[Corona beings]]" title="Leonard Cohen">
-<pre>
-[img[pictures/leonard-cohen.jpg]]
+<div created="20200404120341485" modified="20200404170134340" tags="Music [[outer sisters]] [[How many songs can you even invent at all]] [[Corona beings]]" title="Leonard Cohen">
+<pre>[img[pictures/leonard-cohen.jpg]]
+
+
+!!![[The team]]:
+
+The great [[Leonard Cohen R.I.P|https://en.wikipedia.org/wiki/Leonard_Cohen]] didn’t need corona to write [[this song|https://www.youtube.com/watch?v=9UzvVOy0Dq8]] and in the hope we won’t forget the insights of these days. 
+
+
+Villanelle for Our Time
+
+From bitter searching of the heart, Quickened with passion and with pain We rise to play a greater part. This is the faith from which we start: Men shall know commonwealth again From bitter searching of the heart. We loved the easy and the smart, But now, with keener hand and brain, We rise to play a greater part. The lesser loyalties depart, And neither race nor creed remain From bitter searching of the heart. Not steering by the venal chart That tricked the mass for private gain, We rise to play a greater part. Reshaping narrow law and art Whose symbols are the millions slain, From bitter searching of the heart We rise to play a greater part.
 
 
 
@@ -13353,6 +13364,37 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
  &lt;&lt;heblink [[ראשל]]&gt;&gt;
 </pre>
 </div>
+<div created="20200404170939665" modified="20200404174314645" tags="[[The team]]" title="SA OOTW LW SSR">
+<pre>[img[pictures/chavlaz.jpg]]
+
+
+
+
+
+''So Awesome,''
+
+
+''Out Of This World ''
+
+
+''Like Wow''
+
+
+'' Show Some Respect''''''
+
+
+
+
+
+
+
+
+ &lt;&lt;heblink [[חבלז שוכו קר]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20200202175127567" modified="20200202175246360" tags="[[Outer sisters]] Music" title="Saraleh would have liked it">
 <pre>[img[pictures/sarale-hayta.jpg]]
 
@@ -13685,10 +13727,26 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
  &lt;&lt;heblink [[סולטנה ויסמין]]&gt;&gt;
 </pre>
 </div>
-<div created="20200325193610921" modified="20200325193729377" tags="Music [[How many songs can you even invent at all]] [[Outer sisters]]" title="Sunny">
+<div created="20200325193610921" modified="20200404173845102" tags="Music [[How many songs can you even invent at all]] [[Outer sisters]]" title="Sunny">
 <pre>[img[pictures/sunny.jpg]]
 
 
+
+!!![[Yoyo]]:
+
+ In this great version of [[Sunny|https://en.wikipedia.org/wiki/Sunny_(Bobby_Hebb_song)]], [[James Brown|https://www.youtube.com/watch?v=p6FmS5Co-j4]] is telling us in his own way how [[Bobby Hebb|https://www.youtube.com/watch?v=ubvYQxTXO3U]] from Memphis Tennessee wrote this [[great song|https://www.youtube.com/watch?v=zvvBOWI1-jY]] when he was overwhelmed with sadness after his big beloved brother was killed in November 23rd, a day after John F. Kennedy was murdered.
+
+[[This special song|https://www.youtube.com/watch?v=3U9uPIPzG8o]] has [[hundred of covers|https://www.youtube.com/watch?v=Gw-M58IjIuI]] for a good reason, as it is a [[perfect song|https://www.youtube.com/watch?v=zvvBOWI1-jY]], because [[how can you not sing|https://www.youtube.com/watch?v=yD8DcgpLp_w]]:
+
+Sunny Thank you for the sunshine bouquet
+
+Sunny Thank you for the love you brought my way
+
+You gave to me your all and all
+
+And now I feel ten feet tall
+
+Sunny one so true, I love you
 
 
 
@@ -14596,8 +14654,19 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
  &lt;&lt;heblink [[טלוויזיה]]&gt;&gt;</pre>
 </div>
-<div created="20200212165433684" modified="20200330171444223" tags="TV [[Corona beings]]" title="TV Series">
+<div created="20200212165433684" modified="20200404171759905" tags="TV [[Corona beings]]" title="TV Series">
 <pre>[img[pictures/sdarot.jpg]]
+
+
+
+
+!!![[Yoyo]]:
+
+After searching for a while, there comes a time when [[Leonard|https://www.imdb.com/name/nm0001295/?ref_=ttfc_fc_cl_t28]], the regional Indian Shaman of [[Northern Exposure]] understands that the cinema is “the healing tale” of the white man. Based on this logic, TV shows are healthy and binging is [[SA OOTW LW SSR]], not to mention that after 12 seasons of [[Grey’s Anatomy]] I’m ready to become a surgeon. 
+
+
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[TV Series]]&quot;&gt;&gt;
 
