--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@ Error message and password prompt
 
 <li>זקופי הגו</li>
 
-<li>חבל&quot;ז שוכ&quot;ו ק&quot;ר</li>
+<li>חבלז שוכו קר</li>
 
 <li>חבר</li>
 
@@ -9198,7 +9198,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200330165057621" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200330165059068" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200404171933563" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9207,7 +9207,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לאונרד כהן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חבלז שוכו קר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9227,7 +9227,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200401121604900" title="$:/temp/search">
+<div created="20161023184814872" modified="20200404165903892" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13333,8 +13333,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[The erected]]&gt;&gt;
 </pre>
 </div>
-<div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
-<pre>[img[pictures/chavlaz.jpg]]</pre>
+<div created="20180221193850741" modified="20200404171857945" tags="הצוות" title="חבלז שוכו קר">
+<pre>[img[pictures/chavlaz.jpg]]
+
+
+
+&lt;&lt;englink [[SA OOTW LW SSR]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20180814103316187" modified="20200212201446463" tags="סרטים" title="חבר">
 <pre>[img[pictures/friend.jpg]]
@@ -16797,12 +16804,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Closers]]&gt;&gt;</pre>
 </div>
-<div created="20170711173812724" modified="20200330164722046" tags="טלוויזיה סגירים [[הלכות קורונה]]" title="סדרות">
+<div created="20170711173812724" modified="20200404171924881" tags="טלוויזיה סגירים [[הלכות קורונה]]" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
 
-לאחר חיפושים, מגיע רגע בו [[לאונרד|https://www.imdb.com/name/nm0001295/?ref_=ttfc_fc_cl_t28]], השמאן האינדיאני האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבל&quot;ז שוכ&quot;ו ק&quot;ר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
+לאחר חיפושים, מגיע רגע בו [[לאונרד|https://www.imdb.com/name/nm0001295/?ref_=ttfc_fc_cl_t28]], השמאן האינדיאני האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבלז שוכו קר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
 
 
 &lt;&lt;list-links filter:&quot;[tag[סדרות]]&quot;&gt;&gt;
@@ -17122,7 +17129,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Spiral]]&gt;&gt;</pre>
 </div>
-<div created="20190126100956225" modified="20200404120552470" tags="חבר [[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] סגירים [[הלכות קורונה]]" title="סרטים">
+<div created="20190126100956225" modified="20200404171448846" tags="חבר [[סיפורים אמיתיים]] [[כמה שירים כבר אפשר להמציא בכלל]] סגירים [[הלכות קורונה]]" title="סרטים">
 <pre>[img[pictures/sratim.jpg]]
 
 !!![[יויו]]:
